@@ -1,3 +1,7 @@
+2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC4-cvs-b23
+
+	* Updated EZ Prints form to new API in view_photo.php.
+
 2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b22
 
 	* Tweaked text.  Hopefully last change before RC4.
